--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,12 @@
 <h1>新規投稿</h1>
+<% if @list.errors.any? %>
+  <%= @list.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @list.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <!--form_with部分-->
 <!--新規投稿フォームから送信したデータをデータベースへ保存する-->
 <!--非同期通信を行わず通常のフォーム送信を行う-->
